RCFilters: Fix bleeding background
Bug: T237504

--- a/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterTagMultiselectWidget.less
+++ b/resources/src/mediawiki.rcfilters/styles/mw.rcfilters.ui.FilterTagMultiselectWidget.less
@@ -4,6 +4,7 @@
 
 .mw-rcfilters-ui-filterTagMultiselectWidget {
 	max-width: none;
+	margin-top: 16px;
 
 	.oo-ui-tagMultiselectWidget-input input {
 		// Make sure this uses the interface direction, not the content direction
@@ -19,7 +20,6 @@
 			background-color: @colorGray15;
 			border-radius: 2px 2px 0 0;
 			padding: 0 0.6em 0.6em 0.6em;
-			margin-top: 1em;
 			line-height: normal;
 		}
 
